--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,20 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Sleep Olympics - Track, compete, and improve your sleep quality with friends" />
+		<meta name="theme-color" content="#6e8efb" />
+		
+		<!-- Open Graph / Social Media Meta Tags -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Sleep Olympics" />
+		<meta property="og:description" content="Track, compete, and improve your sleep quality with friends" />
+		<meta property="og:image" content="%sveltekit.assets%/og-image.png" />
+		
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
